modules/portal/portal-impl/src/test/resources/myapplication/error/errorChangeStatus.js
exports.handleError = function (err) {
    return {
        status: 301,
        headers: {
            Location: '/another/page'
        }
    };
};
